--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,14 @@ android {
 }
 
 dependencies {
+    // auth microsoft
     implementation('com.microsoft.identity.client:msal:0.1.3'){
         exclude group:'com.android.support', module:'appcompat-v7'
         exclude group:'com.google.code.gson'
     }
 
     implementation 'com.android.volley:volley:1.1.0'
-
+    implementation 'com.microsoft.graph:msgraph-sdk-android:1.3.2'
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'com.google.guava:guava:25.1-android'
 
