--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.microsoft.graph:msgraph-sdk-android:1.3.2'
     implementation 'com.google.guava:guava:25.1-android'
 
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
