--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     implementation 'com.microsoft.graph:msgraph-sdk-android:1.3.2'
     implementation 'com.google.guava:guava:25.1-android'
 
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
     implementation 'com.android.support:cardview-v7:28.0.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
